--- a/css/styles.css
+++ b/css/styles.css
@@ -11777,3 +11777,17 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+<style type="text/css">
+                      nav{
+                        width: 100%;
+                        height: 60px;
+                        background: rgba(0,0,0,.3);
+                        position: absolute;
+                        z-index: 10;
+                      }
+.words{font-size: 70px;
+  letter-spacing: 10px;
+  position: absolute;
+  top:3%;
+  left: 27%;}
+.imgw{position: relative;}
